--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
     - run: |
         touch .env
         echo "${{secrets.PROD_ENV_FILE}}" > .env
+    - run: npx prisma db push
     - run: npx prisma generate
     - run: pm2 restart  tesoreria-api
     
