--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cron": "^4.3.3",
+    "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "cross-env": "^7.0.3",
     "zod": "^3.20.0"
   },
   "devDependencies": {
